# baoclone

./: .gitignore  CMakeLists.txt  Make-mingw  Makefile  README.txt  baoclone-ru.po  baoclone.linux  baoclone.po  bf-888s.c  bf-t1.c  compile.bat  ft-60r.c  main.c  radio.c  radio.h  util.c  util.h  uv-5r.c  uv-b5.c
examples/: bf-888s-factory2.conf  bf-888s-factory2.img  bf-888s-gmrs.conf  bf-888s-gmrs.img  bf-888s-sunnyvale.conf  bf-f8hp-factory.conf  bf-f8hp-factory.img  bf-t1-factory.conf  bf-t1-factory.img  bf-t1-gmrs.conf  bf-t1-gmrs.img  ft-60r-sunnyvale.conf  uv-5r-gmrs.conf  uv-5r-sunnyvale.conf  uv-5r-sunnyvale.img  uv-b5-sunnyvale.conf
tests/: CMakeLists.txt  config_test.cpp  util.cpp  util.h  uv5r_test.cpp  version_test.cpp
